# Soc-Analyst-Final-Repo

./: .dockerignore  .gitignore  Dockerfile  README.md  Scalar_Hackathon_Experience_Blog.MD  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_local.ps1  streamlit_app.py
.streamlit/: config.toml
docker/: entrypoint.sh  nginx.conf.template
frontend/: index.html
notebooks/: SocAnalyst_Colab.ipynb
server/: Dockerfile  app.py  datasets.py  environment.py  integrations.py  rl_trainer.py  threat_rules.py
tests/: test_datasets.py  test_threat_rules.py
utils/: __init__.py  api_client.py  state.py
