[project]
name = "soc_analyst"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.1.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "trl==0.8.6",
    "torch>=2.0.0",
    "transformers>=4.38.0,<5.0.0",
    "peft>=0.7.0",
    "splunk-sdk>=1.7.0",
    "paramiko>=3.0.0",
    "mcp>=0.1.0",
    "huggingface_hub>=0.23.0",
]

[project.scripts]
server = "server.app:main"
